	* Added adapter for QA Systems Cantata. Thank you Andreas Schätti

v44 2023-04-10

	* Fixed issue 293: Wildcard _ could not match types that can be
	  constructed from any type. This fix unfortunately turns off conversion
	  warnings for REQUIRE_CALL and friends when building with gcc. Thank
	  you @TimonNoethlichs for reporting.

	* Fixed issue 296: Improved sequence violation message when ALLOW_CALL
	  is involved. Thank you Sigurður Sveinn Halldórsson for reporting.

	* Fixed -Wunsafe-buffer-usage warning from clang-16

	* static_assert() when trying to get a runtime value from any matcher

	* Bumped required CMake version to 3.14 or later. Thank you Luke Dennis
	  for reporting.

v43 2022-10-26

	* Added static_assert to duck_typed_matcher's templatized conversion
	  function explaining why it should never be instantiated. Issue 270.

	* Added gcc-12 and clang++-15 to the CI build matrix

	* Fixed issue 272: Support Catch2 piecemeal headers.

	* Fix issue #279 where the doctest adapter showed violation messages
	  as hex addresses for most recent releases of doctest. Thanks
	  @SimonKagstrom for reporting.

	* Fixed an obscure bug where an expectation could match with a sequence
	  object that has run to completion.

	* Specify ARCH_INDEPENDENT when creating package version file in CMake.

v42 2021-12-07

	* Fixed issue 264: Sequence objects did not correctly report
	  is_complete() when there were living, but satisfied, expectations
	  remaining. Thank you Václav Kubernát for reporting.

	* Fixed issue 259 where CMakeFiles.txt wrongly installed trompeloeil
	  for projects that includes it. It is now an option. See FAQ for
	  details. Thank you Ismail Pazarbasi for reporting and fixing.

	* Updated Catch2 to version 2.13.7 to compile unit tests on systems
	  with glibc >= 2.34.

	* Fixed issue 255: Hex dumps showed byte values <= 15(dec) wrong.
	  Thank you Stuart Dootson for reporting.

	* Fixed issue 253: Resolve lingering warnings in early Clang compilers